# Rust_Learning

./: .gitignore
CurrentProj/: Cargo.toml  instruction.txt
CurrentProj/src/: main.rs
Ex_Files/Exercise Files/02_06_bitwise_operations/begin/bitwise_operations/src/: main.rs
Ex_Files/Exercise Files/05_06_for_loops/end/for_loops/src/: main.rs
Ex_Files/Exercise Files/06_06_move_clone_copy/begin/move_clone_copy/src/: main.rs
Ex_Files/Exercise Files/12_05_multiple_trait_bounds/end/multiple_trait_bounds/src/: main.rs
Ex_Files_Rust_EssT_2021/Exercise Files/02_04_arithmetic_operations/begin/arithmetic_operations/src/: main.rs
Ex_Files_Rust_EssT_2021/Exercise Files/06_01_variable_scope/begin/variable_scope/src/: main.rs
My_Ex/Excercise2/: README.md  langauge.txt
My_Ex/Excercise2/src/: main.rs
My_Ex/Excercise4/: langauge.txt
myproject/: instruction.txt  langauge.txt
myproject/src/: main.rs
