[package]
name = "RustProject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = "1.0.70"      ## dependencies libraries
# example = { path = "/path/to/example" }  ## local libraries
# thing = { git = "https://github.com/example/thing" }  ## gitbuh